feat: implementado servico que retorna o ajuste das vendas na api do ifood